main.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

body {
  margin: 0;
  padding: 0;
  background-color: #F6F7EB;
  color: #FFFFFF;
  font-family: 'Trocchi', serif;
}

ul {
  list-style: none;
  padding-left: 0;
}

li, a {
  text-decoration: none;
  color: #FFFFFF;
  text-transform: lowercase;
  /*font-family: 'Suranna', serif;*/
}

p, a {
  text-decoration: none;
  /*font-family: 'Suranna', serif;*/
}

p, li {
    /*font-family: 'Suranna', serif;*/
}

.main-nav-link > a {
  font-size: 14px;
  color: #27ae60;
}

.name, h2, h3, .project-link > a {
  font-family: 'Rozha One', serif;
}

.nav-flex {
  display: flex;
  justify-content: space-around;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: black;
}

.name {
  display: flex;
  justify-content: center;
  padding-top: 68px;
  font-size: 48px;
  text-shadow: 3px 3px 3px #BAC1B8;
}

.about {
  padding-top: 42px;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 18px;
  margin-left: 12px;
  margin-right: 12px;
  line-height: 290%;
  font-size: 14px;
}

.work {
  display: flex;
  flex-direction: column;
  align-items: center; 
  margin-top: 48px;
  padding-top: 48px;
 
}

.work > h2, .project-description {
  color: black;
}

hr {
  height: 4px;
  width: 80%;
  background-color: black;
  margin-top: 10px;
  margin-bottom: 8px;
}

.hr-short {
  height: 2px;
  width: 50%;
  background-color: black;
}

h1, #about {
  color: black;
}

h2 {
  font-size: 36px;
}

h3, .project-description {
  color: black;
}

#work {
  background-color: #FFFFFF;
  color: #27ae60;
}

.project {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 85%;
}

.project > h3 {
  font-size: 20px;
  margin-bottom: 10px;
}

.project-one, .project-two, .project-three, .project-four {
  padding: 10px 10px;
  margin: 5px 5px;
  margin-bottom: 30px;
}

.project-one {
  background-color: #3F88C5;
}

.project-two {
  background-color: #E94F37;
}

.project-three {
  background-color: #44BBa4;
}

.project-four {
  background-color: #BAC1B8;
}

.project-stack {
  display: flex;
  justify-content: space-between;
}

.project-stack-item {
  width: 15%;
  height: 15%;
}

.project-stack-item:last-of-type {
  padding-top: 7px;
}

.project-image {
  width: 50%;
  height: 50%;
}

.project-one > .project-image {
  box-shadow: 10px 10px 22px 3px #004080;
}

.project-one > a {
  text-shadow: 3px 3px 3px 1px #004080;
}

.project-two > .project-image {
  box-shadow: 10px 10px 22px 3px #990000;
}

.project-three > .project-image {
  box-shadow: 10px 10px 22px 3px #008060;
}


.project-four > .project-image {
  width: 50%;
  height: 50%;
  box-shadow: 10px 10px 22px 3px gray;
}

.project-description {
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 14px;
  padding-top: 20px;
}

.project-links {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project-links-ul {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 200%;
  margin-top: 15px;
}

.project-link > a {
  font-size: 14px;
  color: black;
}

.contact-link > a {
  color: #27ae60;
}

.contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 36px;
  background-color: black;
}

.icon-stack {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact-links {
  width: 50%;
  padding-bottom: 20px;
}

.contact-info-flex {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 10px;
}

.info-form-flex {
  display: flex;
  flex-direction: column;
  width: 75%;
  align-items: center;
}
.info-form-flex > label {
  margin-bottom: 1px;
}

.info-form-flex > input {
  margin-bottom: 12px;
  padding: 10px;
}

.info-form-flex > textarea {
  padding: 20px;
}

.send-message {
  margin-top: 15px;
  border-radius: 25%;
}
/*end of iphone styling*/



/**********START OF IPHONE LANDSCAPE RESPONSIVENESS************/
@media only screen and (min-width: 480px) and (max-width: 767px) {
  .hide-when-large {
    display: none;
  }

  .main-nav-link > a {
    font-size: 20px;
  }

  .name {
    padding-top: 300px;
    font-size: 72px;
  }

  .name-headshot {
    margin-right: 20px;
    margin-left: 20px;
    background-size: 60%;
    height: 500px;
    padding-top: 30px;
  }

  .about {
    font-size: 18px;
  }

  .work {
    padding-top: 100px;
  }

  .project > h3 {
    font-size: 25px;
    margin-bottom: 30px;
    margin-top: 25px;
  }

  .project-image {
    box-shadow: 10px 10px 25px 6px gray;
  }

  .project-stack-item {
    width: 10%;
    height: 10%;
  }

  .project-description {
    padding-top: 27px;
  }

  .nav-flex {
    padding-top: 20px;
    padding-bottom: 40px;
  }

  .contact {
    margin-bottom: 30px;
  }
} /*end of iphone landscape at media block*/


/*****START OF IPAD CSS*******/
@media only screen and (min-width: 768px) and (max-width: 991px) {

}/*end of ipad css*/


/*****START OF IPAD PRO CSS*******/
@media only screen and (min-width: 992px) and (max-width: 1999px) {

}/*end of ipad pro css*/


@media (min-width: 2000px) {
  .hide-when-large {
    display: none;
  }

  .main-nav {
    margin-bottom: 80px;
  }

  .main-nav-link > a {
    font-size: 16px;
  }

  .name {
    display: inline-block;
    position: relative;
    padding-top: 148px;
    font-size: 100px;
    padding-left: 100px;
  }

  .about {
    padding-top: 100px;
    padding-left: 120px;
    padding-right: 120px;
    margin-bottom: 100px;
    font-size: 20px;
  }

  .work {
    padding-top: 100px;
  }

  .work > h2 {
    font-size: 55px;
  }

  .project {
    margin-top: 50px; 
  }

  .project > h3 {
    font-size: 45px;
    margin-bottom: 40px;
  }

  .project-image {
    box-shadow: 10px 10px 43px 6px gray;
  }

  .project-stack-item {
    width: 7%;
    height: 7%;
  }

  .project-description {
    padding-top: 50px;
    font-size: 25px;
  }

  .project-link > a {
    font-size: 18px;
  }

  .contact {
    padding-top: 0;
    margin-top: 40px;
  }

  .info-form-flex > input {
    margin-bottom: 20px;
  }

}/*end of desktop at media block*/

